cosmetic for deploy

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,9 +44,9 @@
 
 <section class="flex items-center gap-[50px] w-[80%] mt-[40px] ">
 <img src="{{ url_for('static', path='images/ya.jpg') }}" class="w-[700px] h-[700px] rounded-full border-[5px] object-cover" />
-<div class="flex flex-col text-center h-[700px]">
+<div class="flex flex-row text-center h-[700px] items-center">
     <p class="text-[256px] leading-[0.5]">Я*</p>
-    <p class="text-[34px] text-white mt-auto">* - с небольшой помощью ИИ</p>
+<!--    <p class="text-[34px] text-white mt-auto">* - с небольшой помощью ИИ</p   врать плохо  >-->
 </div>
 </section>
 {% endblock %}
