--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,7 +9,7 @@
 
         <div class="flex-shrink-0">
             <img class="rounded-full w-[420px] h-[420px] object-cover border-4 border-white"
-                 src="{{ url_for('static', path='images/ya.jpg') }}">
+                 src="{{ url_for('static', path='images/filler.png') }}">
         </div>
 
         <div class="flex flex-col justify-center flex-1">
@@ -69,16 +69,16 @@
             <div class="flex gap-[15px]">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
             </div>
 
@@ -89,16 +89,16 @@
             <div class="flex gap-[15px]">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
                 <img class="h-[120px] rounded-lg object-cover"
-                     src="{{ url_for('static', path='images/ya.jpg') }}">
+                     src="{{ url_for('static', path='images/filler.png') }}">
 
             </div>
 
